examples/type_system/failing/14_unhandled_effect.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// Runtime error: no handler for Console
perform Console.print("hello")
